# ocserv

./: .codespellrc  .gitlab-ci.yml  .lcovrc  .triage-policies.yml  AGENTS.md  CONTRIBUTING.md  NEWS  README.md  configure.ac  dist-script.sh  meson.build  meson_options.txt
contrib/ai/: README.md
doc/: Makefile.am  design.md  meson.build  occtl.8.md  ocpasswd.8.md  ocserv.8.md  sample.config
doc/requirements/: README.md
doc/requirements/internal/: authentication.md  config.md  ipc.md  main.md  sec-mod.md  worker.md
doc/requirements/protocol/: unified.md
doc/requirements/protocol/sources/: anyconnect.md  openconnect.md
libopts/: ag-char-map.h  autoopts.c  find.c  genshell.c  load.c  makeshell.c  usage.c  value-type.c  version.c  xat-attribute.c
libopts/autoopts/: options.h
libopts/compat/: compat.h
src/: Makefile.am  auth-unix.c  auth-unix.h  cfg.proto  common-config.h  config-kkdcp.c  config-ports.c  config.c  cookies.c  cookies.h  ctl.proto  defs.h  gettime.h  html.c  http-heads.h  icmp-ping.c  icmp-ping.h  ip-lease.c  ip-lease.h  ip-util.c  ip-util.h  ipc.proto  isolate.c  isolate.h  log.c  log.h  lzs.c  lzs.h  main-auth.c  main-ban.c  main-ctl-unix.c  main-ctl.h  main-limits.c  main-limits.h  main-log.c  main-proc.c  main-sec-mod-cmd.c  main-user.c  main-worker-cmd.c  main.c  (+55 more)
src/acct/: pam.c  pam.h  radius.c  radius.h
src/auth/: common.c  common.h  gssapi.c  gssapi.h  openidconnect.c  openidconnect.h  pam-stack.h  pam.c  pam.h  plain.c  plain.h  radius.c  radius.h
src/ccan/: meson.build
src/ccan/hash/: hash.c  hash.h
src/ccan/talloc/: talloc.c  talloc.h
src/common/: base64-helper.c  base64-helper.h  common.c  common.h  hmac.c  hmac.h  snapshot.c  snapshot.h  sockdiag.c  sockdiag.h  system.c  system.h
src/http-parser/: http_parser.c  http_parser.h
src/inih/: ini.c  meson.build
src/llhttp/: meson.build
src/occtl/: cache.c  ctl.h  geoip.c  geoip.h  ip-cache.c  json.c  json.h  maxmind.c  meson.build  nl.c  occtl.c  occtl.h  pager.c  print.c  session-cache.c  time.c  unix.c
src/ocpasswd/: meson.build  ocpasswd.c
src/pcl/: meson.build  pcl.c
src/protobuf/: meson.build
src/sup-config/: file.c  file.h  radius.c  radius.h
tests/: Makefile.am  ban-ips.c  bandwidth  check-config-scope.py  cipher-common.sh  common.sh  cstp-recv.c  defvhost-traffic  disconnect-user  disconnect-user2  fw-ocserv  fw-ocserv-ports-routes  haproxy-auth  haproxy-connect  haproxy-proxyproto  haproxy-proxyproto-v1  html-escape.c  human_addr.c  idle-timeout  ipv4-prefix.c  ipv6-iface  ipv6-prefix.c  ipv6-small-net  json  kerberos  kkdcp-parsing.c  lz4-compression  lzs-compression  meson.build  no-ipv6-ocv3  ns.sh  p2p-net  pam-abort-mod.c  port-parsing.c  proxyproto-v1.c  proxyproto-v2.c  radius  radius-config  radius-group  radius-ipv6-prefix  (+36 more)
tests/data/: p2p-iface.config  test-long-dtls-prio.config  test-occtl-commands.config  test-pam-abort.config  test-pam-token.config  test-pam.config  test-pam.passwd
tests/data/pam/: meson.build  ocserv-abort.in  ocserv-vhost1.in  ocserv-vhost2.in  passdb-vhost1.templ  passdb-vhost2.templ
tests/data/pam-acct/: meson.build
tests/data/raddb/: meson.build
tests/data/radiusclient/: meson.build
tests/ocserv-fw/: assertions.sh  ocserv-fw-assertions.sh  ocserv-fw-run-suite.sh  run-assertions.sh  run-virt.sh
tests/scripts/: vpnc-script
tests/user-config-explicit/: test4
